# Server-Client-Application

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Client/: CMakeLists.txt  Client  Client.cpp  Makefile  cmake_install.cmake
Common/: BERlength.cpp  BERlength.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ConnectionHandler.cpp  ConnectionHandler.h  Exceptions.h  Makefile  cmake_install.cmake
Server/: CMakeLists.txt  Makefile  Server  Server.cpp  TcpServer.cpp  TcpServer.h  cmake_install.cmake
